First stab at LogMessage and logs tailed in web client

--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,10 @@
         "destination": "/table.html"
       },
       {
+        "source": "/Poker",
+        "function": "Poker"
+      },
+      {
         "source": "/MakeTable",
         "function": "MakeTable"
       }
